# Saena_Public

./: .gitignore  CMakeLists.txt  CMakeLists_orig.txt  CMakeLists_standalone.txt  README.md  install.sh  install_standalone.sh  main.cpp  saena_matrix.cpp
cmake/: FindMKL.cmake
data/: 2DLarge_sorted.mtx  3DMed_sorted.mtx  3DSmall_sorted.mtx  options001.xml
include/: aux_functions.h  data_struct.h  grid.h  ietl_saena.h  petsc_functions.h  saena.hpp  saena_matrix.h  saena_object.h  saena_vector.h
include/usort/: parUtils.tcc
src/: aux_functions.cpp  data_struct.cpp  grid.cpp  main.cpp  main_read_file.cpp  petsc_functions.cpp  prolong_matrix.cpp  restrict_matrix.cpp  saena.cpp  saena_matrix.cpp  saena_matrix_matvec.cpp  saena_matrix_repart.cpp  saena_matrix_setup.cpp  saena_matrix_shrink.cpp  saena_object.cpp  saena_object_lazy.cpp  saena_object_pcoarsen_modal.cpp  saena_object_repart_shrink.cpp  saena_object_setup1.cpp  saena_object_setup2.cpp  saena_object_setup2_test.cpp  saena_object_setup3.cpp  saena_object_setup_matmat.cpp  saena_object_solve.cpp  saena_object_write2file.cpp  saena_vector.cpp
